[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/lib.rs"

# `xevion` is the content-management API client; `xevion-server` is the web
# server. Both link the `api` library above (no separate crates).
[[bin]]
name = "xevion"
path = "src/bin/xevion.rs"

[[bin]]
name = "xevion-server"
path = "src/bin/xevion-server.rs"
required-features = ["server"]

[features]
default = ["server"]
# The web server: asset embedding (`include_dir!` of `web/build/*`) and every
# server-only module (axum routing, proxy, ISR cache, OG images, R2, auth,
# background jobs). The `xevion` client CLI is built without it
# (`cargo install --no-default-features --bin xevion`), so it needs no frontend
# build and skips the entire server module graph.
server = []

[dependencies]
argon2 = "0.5"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["cookie"] }
blurhash = "0.2.3"
clap = { version = "4.5.54", features = ["derive", "env"] }
dashmap = "6.1.0"
dotenvy = "0.15"
futures = "0.3.31"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "gif", "webp", "avif"] }
include_dir = "0.7.4"
mime_guess = "2.0.5"
moka = { version = "0.12.12", features = ["future"] }
nu-ansi-term = "0.50.3"
parking_lot = "0.12.5"
rand = "0.10.0"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls-no-provider", "charset", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate", "json"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.49.0", features = ["full"] }
ts-rs = { version = "12", features = ["uuid-impl", "no-serde-warnings"] }
tower = "0.5"
tower-http = { version = "0.7.0", features = ["trace", "cors", "limit", "compression-full"] }

# Compression for ISR cache
zstd = "0.13"
brotli = "8"
flate2 = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
ulid = { version = "1", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1", features = ["serde", "v4"] }
opendal = { version = "0.57.0", features = ["services-s3"] }
nanoid = "0.5.0"
pulldown-cmark = { version = "0.13.4", default-features = false }
toml = "1.1.2"
directories = "6.0.0"
sha2 = "0.11.0"
open = "5.3.5"
tokio-stream = { version = "0.1.18", features = ["sync"] }
gethostname = "1.1.0"
hex = "0.4.3"
snafu = "0.9.1"
miette = { version = "7.6.0", features = ["fancy"] }

[profile.dev]
debug = "line-tables-only"

[profile.release]
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Casts from u128 (Duration::as_millis) → u64, usize → i32 (display_order),
# and similar bounded numeric conversions are pervasive in HTTP/timing/db code.
# Allowing crate-wide avoids per-site noise; individual call sites are bounded by
# their inputs (durations < u64 nanoseconds, display orders < i32::MAX, etc.).
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# The CLI runs on a single-threaded runtime; futures don't need to be Send.
future_not_send = "allow"

# Stylistic: `if let Some(x) = opt { ... } else { ... }` is often clearer than
# `opt.map_or_else(...)`, especially with multi-line else branches.
option_if_let_else = "allow"

# Per-function lines are already bounded by common-sense refactoring; this lint
# is noisy for server setup and request handlers without adding value.
too_many_lines = "allow"

# Hurts locality for small helper types/functions tightly scoped to one call site.
items_after_statements = "allow"

# False positive for types carrying `serde_json::Value` (which has no `Eq`): the
# lint suggests deriving `Eq` even where it cannot compile. Our content blocks
# derive `PartialEq` for tests but hold opaque JSON `data`.
derive_partial_eq_without_eq = "allow"

# `src/lib.rs` exists only to share code between the `xevion` and `xevion-server`
# binaries — it is not a published library, so its "public" surface is an
# implementation detail. These pedantic public-API-hygiene lints (documenting
# every Err/panic, #[must_use] on every getter, generic hashers) add pure noise
# for an internal crate and would otherwise fire on hundreds of items.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_long_first_doc_paragraph = "allow"
implicit_hasher = "allow"
